--- a/meal/requestmeal/templates/requestmeal/about.html
+++ b/meal/requestmeal/templates/requestmeal/about.html
@@ -137,4 +137,9 @@
 </div>
 
 
+<a class="nav-link" download href="../../static/requestmeal/reports/semester_donations.csv">
+  <span data-feather="file-text" class="align-text-bottom"></span>
+  Semesterly donation histrory
+</a>
+
 {% endblock %}
