--- a/meal/requestmeal/templates/requestmeal/adminpage.html
+++ b/meal/requestmeal/templates/requestmeal/adminpage.html
@@ -80,13 +80,13 @@
         </h6>
         <ul class="nav flex-column mb-2">
           <li class="nav-item">
-            <a class="nav-link" download href="../reports/current_semester_bank.csv">
+            <a class="nav-link" download href="../../static/requestmeal/reports/current_semester_bank.csv">
               <span data-feather="file-text" class="align-text-bottom"></span>
               Current semester bank
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" download href="../reports/semester_donation.csv">
+            <a class="nav-link" download href="../../static/requestmeal/reports/semester_donations.csv">
               <span data-feather="file-text" class="align-text-bottom"></span>
               Semesterly donation histrory
             </a>
