--- a/meal/requestmeal/templates/requestmeal/register.html
+++ b/meal/requestmeal/templates/requestmeal/register.html
@@ -97,7 +97,7 @@
                   <!-- <div class="d-grid gap-2 d-sm-flex justify-content-sm-center"> -->
                     <!-- <button type="button" class="btn btn-primary btn-lg px-4 gap-3" href="{% url 'login'%}">Become a Member</button> -->
                     <br>
-                    <a style='position: absolute; right=0px;' class="btn btn-primary me-md-2" href="{% url 'login'%}" type="button">Become a member!</a>
+                    <a class="btn btn-primary me-md-2" href="{% url 'login'%}" type="button">Become a member!</a>
                   <!-- </div> -->
                 <!-- </div> -->
               <!-- </div> -->
