--- a/meal/requestmeal/templates/requestmeal/test.html
+++ b/meal/requestmeal/templates/requestmeal/test.html
@@ -1,291 +1,125 @@
 {% extends "requestmeal/base.html" %}
 
+{% load crispy_forms_tags %}
+
 {% block title %}
-|| Welcome
+|| Share A Swipe! - Become a Member
 {% endblock %}
 
 {% block style %}
-{% endblock %}
+.bd-placeholder-img {
+  font-size: 1.125rem;
+  text-anchor: middle;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  user-select: none;
+}
 
-{% block stylesheets %}
-<link rel="canonical" href="https://getbootstrap.com/docs/5.2/examples/dashboard/">
-{% endblock %}
+@media (min-width: 768px) {
+  .bd-placeholder-img-lg {
+    font-size: 3.5rem;
+  }
+}
 
+.b-example-divider {
+  height: 3rem;
+  background-color: rgba(0, 0, 0, .1);
+  border: solid rgba(0, 0, 0, .15);
+  border-width: 1px 0;
+  box-shadow: inset 0 .5em 1.5em rgba(0, 0, 0, .1), inset 0 .125em .5em rgba(0, 0, 0, .15);
+}
+
+.b-example-vr {
+  flex-shrink: 0;
+  width: 1.5rem;
+  height: 100vh;
+}
+
+.bi {
+  vertical-align: -.125em;
+  fill: currentColor;
+}
+
+.nav-scroller {
+  position: relative;
+  z-index: 2;
+  height: 2.75rem;
+  overflow-y: hidden;
+}
+
+.nav-scroller .nav {
+  display: flex;
+  flex-wrap: nowrap;
+  padding-bottom: 1rem;
+  margin-top: -1px;
+  overflow-x: auto;
+  text-align: center;
+  white-space: nowrap;
+  -webkit-overflow-scrolling: touch;
+}
+{% endblock %}
 
 {% block content %}
 
 <div class="p-4 p-md-5 mb-4 text-bg-dark" style='border-bottom-right-radius:5px; border-bottom-left-radius:5px;'>
+  <div class="container">
   <div class="col-md-6 px-0">
-    <h1 class="display-4 fst-italic">Share a Swipe! Manager</h1>
-    <p class="lead my-3">
-      Manage student program enrollment, assign donation allowances, and view
-      data analyses and program statistics.
-    </p>
+    <h1 class="display-4 fst-italic">Become a Member of Share a Swipe</h1>
+    <p class="lead my-3">[Caption about the program, and we'll spend the rest of this page with program info.]</p>
+  </div>
   </div>
 </div>
 
-<div class="container-fluid">
+<div class="container">
+    <!-- <div class="starter-template"> -->
+
+      <div class="row justify-content-center">
+        <br><br>
+        <div class="row"></div>
+        <div class="row">
+          <div class="col-3"></div>
+          <div class="col-6 h-100 p-5 bg-light border rounded-3">
 
 
-  <div class="row">
-    <nav id="sidebarMenu" class="col-md-3 col-lg-2 d-md-block bg-light sidebar collapse">
-      <div class="position-sticky pt-3 sidebar-sticky">
-        <ul class="nav flex-column">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="/admin_home">
-              <span data-feather="home" class="align-text-bottom"></span>
-              Dashboard
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/admin_requests">
-              <span data-feather="file" class="align-text-bottom"></span>
-              <!-- fill in with jinja count of number of requests-->
-              Requests
-              <span class="badge bg-danger rounded-pill">6</span>
+            <form method="POST">
+              {% csrf_token %}
 
-            </a>
-          </li>
-          <!-- <li class="nav-item">
-            <a class="nav-link" href="#">
-              <span data-feather="shopping-cart" class="align-text-bottom"></span>
-              Products
-            </a>
-          </li> -->
-          <li class="nav-item">
-            <a class="nav-link" href="/admin_students">
-              <span data-feather="users" class="align-text-bottom"></span>
-              Students
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">
-              <span data-feather="bar-chart-2" class="align-text-bottom"></span>
-              Reports
-            </a>
-          </li>
-          <!-- <li class="nav-item">
-            <a class="nav-link" href="#">
-              <span data-feather="layers" class="align-text-bottom"></span>
-              Integrations
-            </a>
-          </li> -->
-        </ul>
-
-        <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted">
-          <span>Saved reports</span>
-          <a class="link-secondary" href="#" aria-label="Add a new report">
-            <span data-feather="plus-circle" class="align-text-bottom"></span>
-          </a>
-        </h6>
-        <ul class="nav flex-column mb-2">
-          <li class="nav-item">
-            <a class="nav-link" href="#">
-              <span data-feather="file-text" class="align-text-bottom"></span>
-              Current month
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">
-              <span data-feather="file-text" class="align-text-bottom"></span>
-              Last quarter
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">
-              <span data-feather="file-text" class="align-text-bottom"></span>
-              Social engagement
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">
-              <span data-feather="file-text" class="align-text-bottom"></span>
-              Year-end sale
-            </a>
-          </li>
-        </ul>
-      </div>
-    </nav>
+              <!-- <div class="px-4 py-5 my-5 text-center"> -->
+                <!-- <img class="d-block mx-auto mb-4" src="../assets/brand/bootstrap-logo.svg" alt="" width="72" height="57"> -->
+                <legend class="border-bottom mb-4">Become a Share a Swipe Member</legend>
+                {{ form|crispy }}
+                <!-- <div class="col-lg-6 mx-auto"> -->
+                  <!-- <p class="lead mb-4">
+                    Submit a request to enroll in the Share A Swipe! Program.
+                    Your student profile will be submitted for review. If you are accepted, you will recieve
+                    an email with next steps. You can always check your enrollment status <a href="/sas_status">here</a>.
+                  </p> -->
+                  <!-- <div class="d-grid gap-2 d-sm-flex justify-content-sm-center"> -->
+                    <!-- <button type="button" class="btn btn-primary btn-lg px-4 gap-3" href="{% url 'login'%}">Become a Member</button> -->
+                    <br>
+                    <a class="btn btn-primary me-md-2" href="{% url 'login'%}" type="button">Become a member!</a>
+                  <!-- </div> -->
+                <!-- </div> -->
+              <!-- </div> -->
+            </form>
 
 
-    <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
-
-      <div class="row">
-        <div class="col">
-          <div class="h-100 p-5 bg-light border rounded-3">
-
-
-
-
-            <div class="py-5 text-center">
-              <!-- <img class="d-block mx-auto mb-4" src="../assets/brand/bootstrap-logo.svg" alt="" width="72" height="57"> -->
-              <h2>Accept and Enroll Student</h2>
-              <!-- <p class="lead">Below is an example form built entirely with Bootstrap’s form controls. Each required form group has a validation state that can be triggered by attempting to submit the form without completing it.</p> -->
-            </div>
-
-            <div class="row g-5">
-
-              <div class="col-md-5 col-lg-4 order-md-last">
-                <!-- <h4 class="d-flex justify-content-between align-items-center mb-3">
-                  <span class="text-primary">Your cart</span>
-                  <span class="badge bg-primary rounded-pill">3</span>
-                </h4>
-                <ul class="list-group mb-3">
-                  <li class="list-group-item d-flex justify-content-between lh-sm">
-                    <div>
-                      <h6 class="my-0">Product name</h6>
-                      <small class="text-muted">Brief description</small>
-                    </div>
-                    <span class="text-muted">$12</span>
-                  </li>
-                  <li class="list-group-item d-flex justify-content-between lh-sm">
-                    <div>
-                      <h6 class="my-0">Second product</h6>
-                      <small class="text-muted">Brief description</small>
-                    </div>
-                    <span class="text-muted">$8</span>
-                  </li>
-                  <li class="list-group-item d-flex justify-content-between lh-sm">
-                    <div>
-                      <h6 class="my-0">Third item</h6>
-                      <small class="text-muted">Brief description</small>
-                    </div>
-                    <span class="text-muted">$5</span>
-                  </li>
-                  <li class="list-group-item d-flex justify-content-between bg-light">
-                    <div class="text-success">
-                      <h6 class="my-0">Promo code</h6>
-                      <small>EXAMPLECODE</small>
-                    </div>
-                    <span class="text-success">−$5</span>
-                  </li>
-                  <li class="list-group-item d-flex justify-content-between">
-                    <span>Total (USD)</span>
-                    <strong>$20</strong>
-                  </li>
-                </ul> -->
-
-                <h4 class="d-flex justify-content-between align-items-center mb-3">
-                  <span class="text-secondary">Fall 2022 Remaining Undistributed Donations</span>
-                </h4>
-                <table class="table table-bordered table-striped rounded">
-                  <thead>
-                    <tr>
-                      <th scope="col">Meal Swipes</th>
-                    </tr>
-                  </thead>
-                  <tbody>
-                    <tr>
-                      <!-- use {{meal_swipes}} and {{dining_dollars}} to fill in table-->
-                      <td>38,991</td>
-                    </tr>
-                  </tbody>
-                </table>
-
-                <table class="table table-bordered table-striped rounded">
-                  <thead>
-                    <tr>
-                      <th scope="col">Dining Dollars</th>
-                    </tr>
-                  </thead>
-                  <tbody>
-                    <tr>
-                      <!-- use {{meal_swipes}} and {{dining_dollars}} to fill in table-->
-                      <td>$50,021.09</td>
-                    </tr>
-                  </tbody>
-                </table>
-              </div>
-
-              <div class="col-md-7 col-lg-8">
-                <h4 class="mb-3">Student Information</h4>
-                <form class="needs-validation" novalidate>
-                  <div class="row g-3">
-                    <div class="col-sm-6">
-                      <label for="firstName" class="form-label">First name</label>
-                      <input type="text" class="form-control" id="firstName" placeholder="" value="" required>
-                      <div class="invalid-feedback">
-                        Valid first name is required.
-                      </div>
-                    </div>
-
-                    <div class="col-sm-6">
-                      <label for="lastName" class="form-label">Last name</label>
-                      <input type="text" class="form-control" id="lastName" placeholder="" value="" required>
-                      <div class="invalid-feedback">
-                        Valid last name is required.
-                      </div>
-                    </div>
-
-                    <div class="col-12">
-                      <label for="username" class="form-label">Username</label>
-                      <div class="input-group has-validation">
-                        <span class="input-group-text">@</span>
-                        <input type="text" class="form-control" id="username" placeholder="Username" required>
-                      <div class="invalid-feedback">
-                          Your username is required.
-                        </div>
-                      </div>
-                    </div>
-
-                    <div class="col-12">
-                      <label for="email" class="form-label">Email <span class="text-muted">(Optional)</span></label>
-                      <input type="email" class="form-control" id="email" placeholder="you@example.com">
-                      <div class="invalid-feedback">
-                        Please enter a valid email address for shipping updates.
-                      </div>
-                    </div>
-
-
-
-                  <button class="w-100 btn btn-primary btn-lg" type="submit">Continue to checkout</button>
-                </form>
-              </div>
-            </div>
-
+            <br><br>
+            <small> Already have an account? <a href="{% url 'login'%}">Log in here.</a></small>
 
           </div>
+          <div class="col-3"></div>
         </div>
+        <div class="row"></div>
       </div>
 
-
-    </main>
-  </div>
+    <!-- </div> -->
 </div>
 
 
-    <script src="../static/js/bootstrap.bundle.min.js"></script>
-    <!-- <script src="../static/js/dashboard.js"></script> -->
 
-    <script src="https://cdn.jsdelivr.net/npm/feather-icons@4.28.0/dist/feather.min.js" integrity="sha384-uO3SXW5IuS1ZpFPKugNNWqTZRRglnUJK6UAZ/gxOX80nxEkN9NcGZTftn6RzhGWE" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.4/dist/Chart.min.js" integrity="sha384-zNy6FEbO50N+Cg5wap8IKA4M/ZnLJgzc6w2NqACZaK0u0FXfOWRRJOnQtpZun8ha" crossorigin="anonymous"></script>
-    <script src="../static/js/dashboard.js"></script>
+
+
+
 
 {% endblock %}
-
-
-
-<label for="firstName" class="form-label">Meal Swipes</label>
-                      <input type="text" class="form-control" id="firstName" placeholder="" value="" required>
-                      <div class="invalid-feedback">
-                        Valid first name is required.
-                      </div>
-                    </div>
-
-                    <div class="col-sm-6">
-                      <label for="lastName" class="form-label">Dining Dollars</label>
-                      <input type="text" class="form-control" id="lastName" placeholder="" value="" required>
-                      <div class="invalid-feedback">
-                        Valid last name is required.
-                      </div>
-                    </div>
-
-                    <div class="col-12">
-                      <label for="username" class="form-label">Net ID</label>
-                      <div class="input-group has-validation">
-                        <input type="text" class="form-control" id="username" placeholder="Net ID" required>
-                      <div class="invalid-feedback">
-                          Your username is required.
-                        </div>
-                      </div>
-                    </div>
