--- a/meal/requestmeal/templates/requestmeal/adminpage.html
+++ b/meal/requestmeal/templates/requestmeal/adminpage.html
@@ -8,11 +8,11 @@
 {% endblock %}
 
 {% block stylesheets %}
-<link rel="canonical" href="https://getbootstrap.com/docs/5.2/examples/dashboard/">
 {% endblock %}
 
 
 {% block content %}
+<link rel="canonical" href="https://getbootstrap.com/docs/5.2/examples/dashboard/">
 
 <div class="p-4 p-md-5 mb-4 text-bg-dark" style='border-bottom-right-radius:5px; border-bottom-left-radius:5px;'>
   <div class="col-md-6 px-0">
@@ -214,5 +214,57 @@
     <script src="https://cdn.jsdelivr.net/npm/feather-icons@4.28.0/dist/feather.min.js" integrity="sha384-uO3SXW5IuS1ZpFPKugNNWqTZRRglnUJK6UAZ/gxOX80nxEkN9NcGZTftn6RzhGWE" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.4/dist/Chart.min.js" integrity="sha384-zNy6FEbO50N+Cg5wap8IKA4M/ZnLJgzc6w2NqACZaK0u0FXfOWRRJOnQtpZun8ha" crossorigin="anonymous"></script>
     <script src="../static/js/dashboard.js"></script>
-
+    <script>
+      (() => {
+      'use strict'
+    
+      feather.replace({ 'aria-hidden': 'true' })
+    
+      // Graphs
+      const ctx = document.getElementById('myChart')
+      // eslint-disable-next-line no-unused-vars
+      const myChart = new Chart(ctx, {
+        type: 'line',
+        data: {
+          labels: [
+            'Fall 2022',
+            'Spring 2023',
+            'Fall 2023',
+            'Spring 2024',
+            'Fall 2024',
+            'Spring 2025',
+            'Fall 2025'
+          ],
+          datasets: [{
+            data: [
+              15339,
+              21345,
+              18483,
+              24003,
+              23489,
+              24092,
+              12034
+            ],
+            lineTension: 0,
+            backgroundColor: 'transparent',
+            borderColor: '#007bff',
+            borderWidth: 4,
+            pointBackgroundColor: '#007bff'
+          }]
+        },
+        options: {
+          scales: {
+            yAxes: [{
+              ticks: {
+                beginAtZero: false
+              }
+            }]
+          },
+          legend: {
+            display: false
+          }
+        }
+      })
+    })()
+    </script>
 {% endblock %}
