--- a/meal/requestmeal/templates/requestmeal/menu.html
+++ b/meal/requestmeal/templates/requestmeal/menu.html
@@ -12,7 +12,8 @@
 
 
 <!-- THIS IS WHAT SHOULD BE LOADED IF YOU HAVE ACCESS (ACCESS LEVEL 2) -->
-
+{% for student in the_student %}
+{% if student.access == 2 %}
 <div class="p-4 p-md-5 mb-4 text-bg-dark" style='border-bottom-right-radius:5px; border-bottom-left-radius:5px;'>
   <div class="container">
   <div class="col-md-6 px-0">
@@ -74,11 +75,10 @@
     </div>
 </div>
 
+{% endif %}
 
 
-
-
-
+{% if student.access != 2 %}
 <!-- THIS IS WHAT SHOULD BE LOADED IF YOU DO NOT HAVE ACCESS (ACCESS LEVEL 0,1) -->
 
 <div class="p-4 p-md-5 mb-4 text-bg-dark" style='border-bottom-right-radius:5px; border-bottom-left-radius:5px;'>
@@ -112,5 +112,7 @@
     </div>
 </div>
 
+{% endif %}
+{% endfor %}
 
 {% endblock %}
