--- a/meal/requestmeal/templates/requestmeal/test.html
+++ b/meal/requestmeal/templates/requestmeal/test.html
@@ -86,8 +86,10 @@
 
               <!-- <div class="px-4 py-5 my-5 text-center"> -->
                 <!-- <img class="d-block mx-auto mb-4" src="../assets/brand/bootstrap-logo.svg" alt="" width="72" height="57"> -->
+              <fieldset>
                 <legend class="border-bottom mb-4">Become a Share a Swipe Member</legend>
                 {{ form|crispy }}
+              </fieldset>
                 <!-- <div class="col-lg-6 mx-auto"> -->
                   <!-- <p class="lead mb-4">
                     Submit a request to enroll in the Share A Swipe! Program.
