--- a/meal/requestmeal/templates/requestmeal/studentlist.html
+++ b/meal/requestmeal/templates/requestmeal/studentlist.html
@@ -57,12 +57,21 @@
               Students
             </a>
           </li>
+
           <li class="nav-item">
+            <a class="nav-link" href="{% url 'meal-adminaccept'%}">
+              <span data-feather="users" class="align-text-bottom"></span>
+              Allocate Donations
+            </a>
+          </li>
+
+
+          <!-- <li class="nav-item">
             <a class="nav-link" href="#">
               <span data-feather="bar-chart-2" class="align-text-bottom"></span>
               Reports
             </a>
-          </li>
+          </li> -->
           <!-- <li class="nav-item">
             <a class="nav-link" href="#">
               <span data-feather="layers" class="align-text-bottom"></span>
@@ -73,33 +82,21 @@
 
         <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted">
           <span>Saved reports</span>
-          <a class="link-secondary" href="#" aria-label="Add a new report">
+          <!-- <a class="link-secondary" href="#" aria-label="Add a new report">
             <span data-feather="plus-circle" class="align-text-bottom"></span>
-          </a>
+          </a> -->
         </h6>
         <ul class="nav flex-column mb-2">
           <li class="nav-item">
-            <a class="nav-link" href="#">
+            <a class="nav-link" download href="../../static/requestmeal/reports/current_semester_bank.csv">
               <span data-feather="file-text" class="align-text-bottom"></span>
-              Current month
+              Current semester bank
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">
+            <a class="nav-link" download href="../../static/requestmeal/reports/Semesterly_Donation_History.pdf">
               <span data-feather="file-text" class="align-text-bottom"></span>
-              Last quarter
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">
-              <span data-feather="file-text" class="align-text-bottom"></span>
-              Social engagement
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">
-              <span data-feather="file-text" class="align-text-bottom"></span>
-              Year-end sale
+              Semesterly donation history
             </a>
           </li>
         </ul>
