added student denied section

--- a/meal/requestmeal/templates/requestmeal/about.html
+++ b/meal/requestmeal/templates/requestmeal/about.html
@@ -67,7 +67,7 @@
         the NYU financial aid team.
 
         <br><br>
-        If you have any inquiries about your elibility, you can email them at <a href="mailto:financial.aid@nyu.edu"> financial.aid@nyu.edu</a>,
+        If you have any inquiries about your elibility, you can email the Office of Financial Aid at <a href="mailto:financial.aid@nyu.edu"> financial.aid@nyu.edu</a>,
         or reach out to the Division of Student Affairs at <a href='mailto:student.affairs@nyu.edu'>student.affairs@nyu.edu</a>.
       </p>
       <br><hr>
