--- a/meal/requestmeal/templates/requestmeal/menu.html
+++ b/meal/requestmeal/templates/requestmeal/menu.html
@@ -79,7 +79,7 @@
 
 
 {% if student.access == 1 %}
-<!-- THIS IS WHAT SHOULD BE LOADED IF YOU DO NOT HAVE ACCESS (ACCESS LEVEL 0,1) -->
+<!-- THIS IS WHAT SHOULD BE LOADED IF YOU DO NOT HAVE ACCESS (ACCESS LEVEL 1) -->
 
 <div class="p-4 p-md-5 mb-4 text-bg-dark" style='border-bottom-right-radius:5px; border-bottom-left-radius:5px;'>
   <div class="container">
@@ -100,7 +100,7 @@
       <div class="col-md-8 align-middle">
         <div class="h-100 p-5 bg-light border rounded-3">
           <h2>Sorry, you do not currently have access to Share A Swipe.</h2>
-          <p> You're request may be pending or denied. You may check back here at any time to review your status.
+          <p> Your request is currently <b>pending</b>. You may check back here at any time to review your status.
           </p>
           <br>
           <small> In the meantime, feel free to read about the program <a href="{% url 'meal-about'%}">here.</a></small>
@@ -115,64 +115,43 @@
 {% endif %}
 
 {% if student.access == 0 %}
+<!-- THIS IS WHAT SHOULD BE LOADED IF YOU DO NOT HAVE ACCESS (ACCESS LEVEL 0) -->
+
 <div class="p-4 p-md-5 mb-4 text-bg-dark" style='border-bottom-right-radius:5px; border-bottom-left-radius:5px;'>
   <div class="container">
   <div class="col-md-6 px-0">
     <h1 class="display-4 fst-italic">Welcome back to Share A Swipe!</h1>
-    <p class="lead my-3">526564563634563View your remaining account balance or transfer awarded meal swipes to your NYU ID card.</p>
+    <p class="lead my-3">
+      Providing students in need a streamlined, convinient, and reliable way to access free meals.
+    </p>
   </div>
   </div>
 </div>
 
+
 <div class="container">
 
     <div class="row align-items-md-stretch justify-content-start">
-      <div class="col-md-6">
+      <div class="col-md-2"> </div>
+      <div class="col-md-8 align-middle">
         <div class="h-100 p-5 bg-light border rounded-3">
-          <!-- use {{semester}} to fill in semester-->
-          <h2>Your Remaining Allowance Balance - Fall 2022</h2>
-          <!-- <br> -->
-          <p>This is the total number of donated meal swipes and
-            dining dollars that you have for the remainder of the semester.
-          </p>
-          <br>
-          <div style='text-align: center'>
-            <div class="table-responsive">
-              <table class="table table-bordered table-striped">
-                <thead>
-                  <tr>
-                    <th scope="col">Meal Swipes</th>
-                    <th scope="col">Dining Dollars</th>
-                  </tr>
-                </thead>
-                <tbody>
-                  <tr>
-                    <!-- use {{meal_swipes}} and {{dining_dollars}} to fill in table-->
-                    {% for student in the_student %}
-                    <td>  {{student.MSallotment}} </td>
-                    <td>  {{student.DDallotment}}</td>
-                    {% endfor %}
-                  </tr>
-                </tbody>
-              </table>
-            </div>
-          </div>
+          <h2>Sorry, you do not currently have access to Share A Swipe.</h2>
+          <p> Unfortunately, your request has been <b>denied</b>.
+            While you will not be able to participate in <i>Share a Swipe</i> this semester, feel free to re-apply at the beginning of next semester.
 
-        </div>
-      </div>
-      <div class="col-md-6 align-middle">
-        <div class="h-100 p-5 bg-light border rounded-3">
-          <h2>Claim Allowance</h2>
-          <p>Claim your donated meal swipes and dining dollar by
-            transfering them to your NYU ID card.
+            <br><br>
+
+            If you beleieve there has been an issue in the review of your application, or you would like to appeal,
+            you may reach out to the Office of Financial Aid at <a href="mailto:financial.aid@nyu.edu"> financial.aid@nyu.edu</a>,
+            or the Division of Student Affairs at <a href='mailto:student.affairs@nyu.edu'>student.affairs@nyu.edu</a>.
           </p>
           <br>
-          <!-- <button class="btn btn-outline-secondary btn-lg" type="button">Claim</button> -->
-          {% for student in the_student %}
-          <a href="{% url 'meal-claim'%}" class="btn btn-outline-secondary btn-lg {% if student.access != 2 %}disabled {% endif %}" role="button">Claim</a>
-          {% endfor %}
+          <small> You can find out more information about the program <a href="{% url 'meal-about'%}">here.</a></small>
+          <br>
         </div>
       </div>
+      <div class="col-md-2"> </div>
+
     </div>
 </div>
 
