adminaccept form border

--- a/meal/requestmeal/templates/requestmeal/adminaccept.html
+++ b/meal/requestmeal/templates/requestmeal/adminaccept.html
@@ -160,7 +160,7 @@
                 </table>
               </div>
 
-              <div class="col-md-7 col-lg-8">
+              <div class="col-md-7 col-lg-8 h-100 p-5 border border-secondary rounded-1">
                 <h4 class="mb-3">Donation Information</h4>
                 <form class="needs-validation" novalidate method = "POST">
                   <div class="row g-3">
