--- a/meal/requestmeal/templates/requestmeal/adminaccept.html
+++ b/meal/requestmeal/templates/requestmeal/adminaccept.html
@@ -61,7 +61,7 @@
 
           <li class="nav-item">
             <a class="nav-link" href="{% url 'meal-adminaccept'%}">
-              <span data-feather="users" class="align-text-bottom"></span>
+              <span data-feather="bar-chart-2" class="align-text-bottom"></span>
               Allocate Donations
             </a>
           </li>
@@ -162,7 +162,7 @@
 
               <div class="col-md-7 col-lg-8 h-100 p-5 border border-secondary rounded-1">
                 <h4 class="mb-3">Donation Information</h4>
-                <form class="needs-validation" novalidate method = "POST">
+                <form class="needs-validation" novalidate method ="POST" style='align:center;'>
                   <div class="row g-3">
                     <div class="col-sm-6">
                       {% csrf_token %}
