--- a/meal/requestmeal/templates/requestmeal/requestlist.html
+++ b/meal/requestmeal/templates/requestmeal/requestlist.html
@@ -61,7 +61,7 @@
 
           <li class="nav-item">
             <a class="nav-link" href="{% url 'meal-adminaccept'%}">
-              <span data-feather="users" class="align-text-bottom"></span>
+              <span data-feather="bar-chart-2" class="align-text-bottom"></span>
               Allocate Donations
             </a>
           </li>
